2006-11-28  Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Helpers.cs: 追加

2006-11-27  Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* LICENSE, LICENSE.MIT.X11: ファイル名変更

2006-11-27  Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* ライセンスをBSDからMIT/X11に変更
	* コメントを付加
	* 文字コードや改行コードを整理

2006-11-14  Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CipherImplementationType.cs: アクセサをpublicに修正

2006-11-14  Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CipherImplementationType.cs: 追加
	* SymmetricAlgorithmPlus.cs: 低メモリ実装や高性能実装を選択するオプションを追加

2006-11-13  Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CipherModePlus.cs
	* ConfluentWaitHandle.cs
	* Program.cs
	* SymmetricAlgorithmPlus.cs
	* SymmetricTransform.cs: 追加